// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorsView displays nothing if no errors 1`] = `<div />`;

exports[`ErrorsView displays procedure link if unknown procedure 1`] = `
<div>
  <div
    class="sc-hMqMXs OpGWx"
  >
    <div
      class="sc-kEYyzF dYsnvA"
    >
      <div
        class="sc-kkGfuU hJCJOW"
      >
        <div
          class="sc-cvbbAY sc-brqgnP ddDdiF"
        >
          ERROR
        </div>
        <h4
          class="sc-iRbamj cKeiXE"
        >
          Neo.ClientError.Procedure.ProcedureNotFound
        </h4>
      </div>
      <div
        class="sc-iAyFgw gPlgsX"
      >
        <pre
          class="sc-gipzik bnZudT"
          data-testid="cypherFrameErrorMessage"
        >
          not found
        </pre>
      </div>
      <div
        class="sc-eHgmQL YzCEy"
      >
        <a
          class="sc-hSdWYo diOLBu"
        >
          <i
            class="sc-bwCtUz kPdlNE fa fa-play-circle-o"
          />
           List available procedures
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorsView does displays an error 1`] = `
<div>
  <div
    class="sc-hMqMXs OpGWx"
  >
    <div
      class="sc-kEYyzF dYsnvA"
    >
      <div
        class="sc-kkGfuU hJCJOW"
      >
        <div
          class="sc-cvbbAY sc-brqgnP ddDdiF"
        >
          ERROR
        </div>
        <h4
          class="sc-iRbamj cKeiXE"
        >
          Test.Error
        </h4>
      </div>
      <div
        class="sc-iAyFgw gPlgsX"
      >
        <pre
          class="sc-gipzik bnZudT"
          data-testid="cypherFrameErrorMessage"
        >
          Test error description
        </pre>
      </div>
    </div>
  </div>
</div>
`;
